<resources>
    <string name="app_name">SQLite</string>
    <string name="usn">USN</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="signup">Signup</string>
    <string name="signin">Signin</string>
    <string name="insert">Insert</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
</resources>
