<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".Credentials">

    <EditText
        android:id="@+id/password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textColor="#ffffff"
        android:layout_marginStart="86dp"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:textColorHint="#ffffff"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/usn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textColorHint="#ffffff"
        android:layout_marginStart="88dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:textColor="#ffffff"
        android:hint="@string/usn"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnsignin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="139dp"
        android:layout_marginTop="197dp"
        android:background="#ff372025"
        android:text="@string/signin"
        android:textColor="#ffffff" />
</RelativeLayout>
